--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
      width: 300px;
      height: 300px;
  }
- .dxy{
+ #dxy{
      position: absolute;
      z-index: 1;
      width: 100%;
      top: 0;
      left: 0;
  }
- .btc{
+ #btc{
      position: absolute;
      z-index: 2;
      width: 100%;
@@ -30,10 +30,10 @@
 <table>
     <td>
         <div class="container">
-            <div id="btcgraph" class="btc">
+            <div id="btc">
 			<img src="https://nomics.com/images/backgrounds/assets/BTC-USD-1d-lg.svg" width="100%" height="100%">
 			</div>
-            <div class="dxy">
+            <div id="dxy">
                 <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
                     {
                     "symbol": "CAPITALCOM:DXY",
@@ -57,24 +57,14 @@
     </td>
 </table>
 
-
-
 </center>
     <script>
 var auto_refresh = setInterval(
 function ()
 {
-document.getElementById("btcgraph").innerHTML = 'BTC<br><a href="https://www.tradingview.com/chart/H5sue6RV/?symbol=BINANCE%3ABTCBUSD" target="_blank"><img src="https://nomics.com/images/backgrounds/assets/BTC-USD-1d-lg.svg" width="100%" height="100%"></a>'
-
-
+document.getElementById("btc").innerHTML = 'BTC<br><a href="https://www.tradingview.com/chart/H5sue6RV/?symbol=BINANCE%3ABTCBUSD" target="_blank"><img src="https://nomics.com/images/backgrounds/assets/BTC-USD-1d-lg.svg" width="100%" height="100%"></a>'
 })
-
-
 }, 600000); // refresh every 10000 milliseconds
-
-
-
-
 
 </script>
 </body>
