--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body style="background-color:black;">
     <br><br>
 <center>
-<font color="white">BTC =</font> <font color="green">Green</font><br>
-<font color="white">DXY =</font> <font color="red">Red</font><br>
+<font color="white">BTC =</font> <font color="green">เส้นสี</font><br>
+<font color="white">DXY =</font> <font color="white">เส้นขาว</font><br>
 <table>
     <td>
         <div class="container">
@@ -42,7 +42,7 @@
                     "locale": "en",
                     "dateRange": "1M",
                     "colorTheme": "dark",
-                    "trendLineColor": "rgba(255, 0, 0, 1)",
+                    "trendLineColor": "rgba(255, 250, 250)",
                     "underLineColor": "rgba(0, 0, 0, 0)",
                     "underLineBottomColor": "rgba(0, 0, 0, 0)",
                     "isTransparent": false,
