--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     "width": "100%",
                     "height": "100%",
                     "locale": "en",
-                    "dateRange": "1M",
+                    "dateRange": "1D",
                     "colorTheme": "dark",
                     "trendLineColor": "rgba(255, 250, 250)",
                     "underLineColor": "rgba(0, 0, 0, 0)",
